--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <p class="quote__text">“In an age where mainstream music is designed to be as easily consumed as possible, listening to Bright Lights is refreshing, to say the least. Her sound is perfect for radio but complex enough to separate her from other pop newcomers.”</p>
         <img class="quote__symbol" src="/quote/quotes.svg" alt="#">
         <hr class="quote__line">
-        <a href="http://PopULove.net" target="_blank">PopULove.net</a>
+        <a class="quote__link" href="http://PopULove.net" target="_blank">PopULove.net</a>
       </div>
       <img class="quote__img" src="/quote/1.jpg" alt="#">
     </div>
