[FEATURE] add hover animation and binding on menu links

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="header__container">
           <img class="header__logo" src="/header/logo.png" alt="#">
           <ul class="header__menu menu">
-             <li class="menu__item"><a href="" class="menu__link">About</a></li>
-             <li class="menu__item"><a href="" class="menu__link">News</a></li>
+             <li class="menu__item"><a href="#about" class="menu__link">About</a></li>
+             <li class="menu__item"><a href="#news" class="menu__link">News</a></li>
              <li class="menu__item"><a href="" class="menu__link">Music</a></li>
              <li class="menu__item"><a href="" class="menu__link">Media</a></li>
              <li class="menu__item"><a href="" class="menu__link">Tours</a></li>
@@ -36,7 +36,7 @@
           </div>
       </div>
   </section>
-  <section class="news">
+  <section class="news" id="news">
       <div class="news__container">
           <div class="news__inner">
               <div class="news__img">
@@ -54,7 +54,7 @@
           </div>
       </div>
   </section>
-  <section class="about">
+  <section class="about" id="about">
       <div class="about__container">
           <div class="about__text-inner">
               <div class="about__logo">
