finish html tracks

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <div class="hero__inner">
               <p class="hero__subtitle">New Single</p>
               <h1 class="hero__title">War For Love</h1>
-              <div class="hero__video">
-                  <img class="hero__play" src="/hero/play.svg" alt="#">
-                  <hr>
-                  <p>00:22-02:54</p>
+              <div class="hero__video video">
+                  <img class="video__play" src="comonn/play.svg" alt="#">
+                  <hr class="video__line">
+                  <p class="video__time">00:22-02:54</p>
               </div>
           </div>
       </div>
@@ -57,9 +57,9 @@
   <section class="about">
       <div class="about__container">
           <div class="about__text-inner">
-              <div class="about__logo">
-                  <img class="about__logo-img" src="/about/logo.svg" alt="#">
-                  <h2 class="about__title">Bright Lights</h2>
+              <div class="about__heading heading">
+                  <img class="heading__img" src="comonn/logo.svg" alt="#">
+                  <h2 class="heading__title">Bright Lights</h2>
               </div>
               <p class="about__info">Bright Lights is a multi-Grammy nominated singer, songwriter, DJ and record producer. She has written for numerous <br> <br> <br> pop stars including Britney Spears, Justin Bieber, Usher and Beyoncé. Her catalog has amassed over 1 billion streams worldwide. More than 100 million of those streams can be attributed to her artist career and include such hits as Porter Robinson's "Language," 3LAU's "How You Love Me" and her own single "Runaway." She was also a featured vocalist on Zedd's #1 Clarity album. Her latest music video, "Put It Down," reached 1 million streams in the first week, releasing independently. Bright Lights is currently in the studio working on a self-produced album slated for release in 2020. </p>
               <div class="about__information">
@@ -98,6 +98,45 @@
       <div class="qoute__description">
         <img class="quote__img" src="/quote/1.jpg" alt="#">
       </div>
+    </div>
+  </section>
+  <section class="tracks">
+    <div class="tracks__container">
+        <div class="tracks__description">
+            <img class="tracks__img" src="public/tracks/icon.png" alt="#">
+        </div>
+        <div class="tracks__inner">
+            <div class="tracks__heading heading">
+                <img class="heading__img" src="comonn/logo.svg" alt="#">
+                <p class="heading__title">Last tracks</p>
+            </div>
+            <div class="tracks__video video">
+                <img class="video__play" src="comonn/play.svg" alt="#">
+                <hr class="video__line">
+                <p class="video__time">00:47-03:30</p>
+            </div>
+            <div class="tracks__songs">
+                <p class="tracks__name"> <span class="tracks__number selected">01</span>3LAU, Bright Lights — How You Love Me</p>
+                <p class="tracks__name"> <span class="tracks__number">02</span>Bright Lights, Kaleena Zanders, Kandy — War For Love</p>
+                <p class="tracks__name"> <span class="tracks__number">03</span>Pink Is Punk, Benny Benassi, Bright Lights — Ghost</p>
+                <p class="tracks__name"> <span class="tracks__number">04</span>Hardwell, Dyro, Bright Lights — Never Say Goodbye</p>
+                <p class="tracks__name"> <span class="tracks__number">05</span>Zeds Dead, Dirtyphonics, Bright Lights — Where Are You Now</p>
+                <p class="tracks__name"> <span class="tracks__number">06</span>Zedd, Bright Lights — Follow You Down</p>
+            </div>
+            <div class="tracks__distributives">
+                <p class="tracks__follow">Follow me:</p>
+                <div class="tracks__app app">
+                    <a target="_blank" class="tracks__link" href="https://www.spotify.com/ua-uk/free/">
+                       <img class="app__img" src="public/tracks/spoti.svg" alt="#">
+                       <p class="app__name">Spotify</p>
+                    </a>
+                    <a target="_blank" class="tracks__link" href="https://www.apple.com/itunes/">
+                        <img class="app__img" src="public/tracks/apple.svg" alt="#">
+                        <p class="app__name">iTunes</p>
+                    </a>
+                </div>
+            </div> 
+        </div>
     </div>
   </section>
   </body>
