finish scss tracks

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <p class="video__time">00:47-03:30</p>
             </div>
             <div class="tracks__songs">
-                <p class="tracks__name"> <span class="tracks__number selected">01</span>3LAU, Bright Lights — How You Love Me</p>
+                <p class="tracks__name selected"> <span class="tracks__number">01</span>3LAU, Bright Lights — How You Love Me</p>
                 <p class="tracks__name"> <span class="tracks__number">02</span>Bright Lights, Kaleena Zanders, Kandy — War For Love</p>
                 <p class="tracks__name"> <span class="tracks__number">03</span>Pink Is Punk, Benny Benassi, Bright Lights — Ghost</p>
                 <p class="tracks__name"> <span class="tracks__number">04</span>Hardwell, Dyro, Bright Lights — Never Say Goodbye</p>
@@ -126,11 +126,11 @@
             <div class="tracks__distributives">
                 <p class="tracks__follow">Follow me:</p>
                 <div class="tracks__app app">
-                    <a target="_blank" class="tracks__link" href="https://www.spotify.com/ua-uk/free/">
+                    <a target="_blank" class="app__link" href="https://www.spotify.com/ua-uk/free/">
                        <img class="app__img" src="public/tracks/spoti.svg" alt="#">
                        <p class="app__name">Spotify</p>
                     </a>
-                    <a target="_blank" class="tracks__link" href="https://www.apple.com/itunes/">
+                    <a target="_blank" class="app__link" href="https://www.apple.com/itunes/">
                         <img class="app__img" src="public/tracks/apple.svg" alt="#">
                         <p class="app__name">iTunes</p>
                     </a>
