finish html gallery

--- a/index.html
+++ b/index.html
@@ -139,5 +139,16 @@
         </div>
     </div>
   </section>
+  <section class="gallery">
+    <div class="gallery__container">
+        <div class="gallery__inner">
+            <img src="gallery/1.png" alt="#" class="gallery__img">
+            <img src="gallery/2.png" alt="#" class="gallery__img">
+            <img src="gallery/3.png" alt="#" class="gallery__img">
+            <img src="gallery/4.png" alt="#" class="gallery__img">
+            <img src="gallery/5.png" alt="#" class="gallery__img">
+        </div>
+    </div>
+  </section>
   </body>
 </html>
