finish section gallery

--- a/index.html
+++ b/index.html
@@ -142,11 +142,26 @@
   <section class="gallery">
     <div class="gallery__container">
         <div class="gallery__inner">
-            <img src="gallery/1.png" alt="#" class="gallery__img">
-            <img src="gallery/2.png" alt="#" class="gallery__img">
-            <img src="gallery/3.png" alt="#" class="gallery__img">
-            <img src="gallery/4.png" alt="#" class="gallery__img">
-            <img src="gallery/5.png" alt="#" class="gallery__img">
+            <div class="gallery__item">
+                <img src="gallery/01.png" alt="#" class="gallery__img">
+                <p class="gallery__text"> Lorem, ipsum dolor.</p>
+            </div>
+            <div class="gallery__item">
+                <img src="gallery/02.png" alt="#" class="gallery__img">
+                <p class="gallery__text"> Lorem, ipsum dolor.</p>
+            </div>
+            <div class="gallery__item">
+                <img src="gallery/03.png" alt="#" class="gallery__img">
+                <p class="gallery__text"> Lorem, ipsum dolor.</p>
+            </div>
+            <div class="gallery__item">
+                <img src="gallery/04.png" alt="#" class="gallery__img">
+                <p class="gallery__text"> Lorem, ipsum dolor.</p>
+            </div>
+            <div class="gallery__item">
+                <img src="gallery/05.png" alt="#" class="gallery__img">
+                <p class="gallery__text">EDC Las Vegas Mainstage</p>
+            </div>
         </div>
     </div>
   </section>
