--- a/index.html
+++ b/index.html
@@ -167,31 +167,33 @@
   </section>
   <section class="events">
     <div class="events__container">
-        <div class="events__item ticket">
-            <img class="ticket__img" src="events/01.jpg" alt="#">
-            <p class="ticket__location">Chandler, AZ</p>
-            <h3 class="ticket__title">The Park at Wild Horse Pass</h3>
-            <div class="ticket__bottombar">
-                <p class="ticket__data">Apr 02 2021</p>
-                <a class="ticket__button" target="_blank" href="">tickets</a>
+        <div class="events__inner">
+            <div class="events__item ticket">
+                <img class="ticket__img" src="events/01.jpg" alt="#">
+                <p class="ticket__location">Chandler, AZ</p>
+                <h3 class="ticket__title">The Park at Wild Horse Pass</h3>
+                <div class="ticket__bottombar">
+                    <p class="ticket__data">Apr 02 2021</p>
+                    <a class="ticket__button" target="_blank" href="">tickets</a>
+                </div>
             </div>
-        </div>
-        <div class="events__item ticket">
-            <img class="ticket__img" src="events/02.jpg" alt="#">
-            <p class="ticket__location">Ibiza, IBZ</p>
-            <h3 class="ticket__title">Swag Ibiza Club</h3>
-            <div class="ticket__bottombar">
-                <p class="ticket__data">Jul 08 2021</p>
-                <a class="ticket__button" target="_blank" href="">tickets</a>
+            <div class="events__item ticket">
+                <img class="ticket__img" src="events/02.jpg" alt="#">
+                <p class="ticket__location">Ibiza, IBZ</p>
+                <h3 class="ticket__title">Swag Ibiza Club</h3>
+                <div class="ticket__bottombar">
+                    <p class="ticket__data">Jul 08 2021</p>
+                    <a class="ticket__button" target="_blank" href="">tickets</a>
+                </div>
             </div>
-        </div>
-        <div class="events__item ticket">
-            <img class="ticket__img" src="events/03.jpg" alt="#">
-            <p class="ticket__location">Ibiza, IBZ</p>
-            <h3 class="ticket__title">El Swing Ibiza</h3>
-            <div class="ticket__bottombar">
-                <p class="ticket__data">Jul 10 2021</p>
-                <a class="ticket__button" target="_blank" href="">tickets</a>
+            <div class="events__item ticket">
+                <img class="ticket__img" src="events/03.jpg" alt="#">
+                <p class="ticket__location">Ibiza, IBZ</p>
+                <h3 class="ticket__title">El Swing Ibiza</h3>
+                <div class="ticket__bottombar">
+                    <p class="ticket__data">Jul 10 2021</p>
+                    <a class="ticket__button" target="_blank" href="">tickets</a>
+                </div>
             </div>
         </div>
     </div>
