--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <div class="header__container">
-          <img class="header__logo" src="/header/logo.png" alt="#">
+          <img class="header__logo" src="comonn/logo.png" alt="#">
           <ul class="header__menu menu">
              <li class="menu__item"><a href="#about" class="menu__link">About</a></li>
              <li class="menu__item"><a href="#news" class="menu__link">News</a></li>
@@ -58,7 +58,7 @@
       <div class="about__container">
           <div class="about__text-inner">
               <div class="about__heading heading">
-                  <img class="heading__img" src="comonn/logo.svg" alt="#">
+                  <img class="heading__img" src="comonn/heading-logo.svg" alt="#">
                   <h2 class="heading__title">Bright Lights</h2>
               </div>
               <p class="about__info">Bright Lights is a multi-Grammy nominated singer, songwriter, DJ and record producer. She has written for numerous <br> <br> <br> pop stars including Britney Spears, Justin Bieber, Usher and Beyoncé. Her catalog has amassed over 1 billion streams worldwide. More than 100 million of those streams can be attributed to her artist career and include such hits as Porter Robinson's "Language," 3LAU's "How You Love Me" and her own single "Runaway." She was also a featured vocalist on Zedd's #1 Clarity album. Her latest music video, "Put It Down," reached 1 million streams in the first week, releasing independently. Bright Lights is currently in the studio working on a self-produced album slated for release in 2020. </p>
@@ -107,7 +107,7 @@
         </div>
         <div class="tracks__inner">
             <div class="tracks__heading heading">
-                <img class="heading__img" src="comonn/logo.svg" alt="#">
+                <img class="heading__img" src="comonn/heading-logo.svg" alt="#">
                 <p class="heading__title">Last tracks</p>
             </div>
             <div class="tracks__video video">
@@ -198,5 +198,29 @@
         </div>
     </div>
   </section>
+  <footer class="footer">
+    <div class="footer__container">
+        <div class="footer__inner">
+            <img class="footer__logo" src="comonn/logo.png" alt="#">
+            <div class="footer__discription">
+                <p class="heading">Artist Management:</p>
+                <p class="text">Email:</p>
+            </div>
+            <div class="footer__discription">
+                <p class="heading">Jake Henny</p>
+                <p class="text">jake@brightlightsofficial.com</p>    
+            </div>
+            <div class="footer__message">
+                <img class="footer__img" src="footer/apple.svg" alt="#">
+                <img class="footer__img" src="footer/spoty.svg" alt="#">
+                <img class="footer__img" src="footer/instagramm.svg" alt="#">
+                <img class="footer__img" src="footer/youtube.svg" alt="#">
+                <img class="footer__img" src="footer/twitter.svg" alt="#">
+                <img class="footer__img" src="footer/facebook.svg" alt="#">
+            </div>
+            <p class="footer__end-text">©  2020 DJ bright lights.</p>
+        </div>
+    </div>  
+  </footer>
   </body>
 </html>
