finish footer scss

--- a/index.html
+++ b/index.html
@@ -203,12 +203,14 @@
         <div class="footer__inner">
             <img class="footer__logo" src="comonn/logo.png" alt="#">
             <div class="footer__discription">
-                <p class="heading">Artist Management:</p>
-                <p class="text">Email:</p>
-            </div>
-            <div class="footer__discription">
-                <p class="heading">Jake Henny</p>
-                <p class="text">jake@brightlightsofficial.com</p>    
+                <div class="footer__item">
+                    <p class="footer__heading">Artist Management:</p>
+                    <p class="footer__heading">email:</p>
+                </div>
+                <div class="footer__item">
+                    <p class="footer__text">Jake Henny</p>
+                    <p class="footer__text">jake@brightlightsofficial.com</p>    
+                </div>
             </div>
             <div class="footer__message">
                 <img class="footer__img" src="footer/apple.svg" alt="#">
